Lint-Cleanup -Werror + Composite-View mit Header/Footer-Flag
Lint:
* -Xlint:dangling-doc-comments aus Suppressions entfernt
  - 350 Java-Dateien Header-Kommentare /** -> /* (Sweep)
  - 6 Edge-Cases manuell (Doc-Kommentare zwischen Imports/Klasse)
* -Xlint:deprecation aus Suppressions entfernt (21 Stellen migriert)
  - Apache StringUtils.equals/compare -> java.util.Objects.equals
  - StringUtils.equalsIgnoreCase/containsIgnoreCase/appendIfMissing
    -> neuer zentraler StringTools-Helper (null-sicher)
  - StringUtils.replace -> String#replace
  - new URL(String) -> URI.create(s).toURL()
  - Runtime.exec(String) -> Runtime.exec(String[]) in Log4J.openLogFile
* -Xlint:this-escape als bewusste Architekturentscheidung markiert
  (~70 Stellen, plugin-interne Subklassen-Hierarchien, kein Refactor-Wert)
* i18n-Key webserver.komposit.mitHeaderFooter -> .mit.header.footer
  (Konvention: alle Keys lowercase mit Punkt-Separator)

Composite-View:
* mitHeaderFooter-Flag durch Frontend, SSE-Nachricht, GlobalProperties
  und WebServerManager durchgereicht
* CompositeViewKonfiguration/-EintragRoh um boolean mitHeaderFooter erweitert
* Frontend (App.jsx, Panel.jsx, SplitPaneComposite.jsx) liest Flag
  aus Init/Diff-Nachrichten

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>